--- a/documentation/CMakeLists.txt
+++ b/documentation/CMakeLists.txt
@@ -33,13 +33,13 @@ install(DIRECTORY DESTINATION "${DIST_DOCTMP}/sphinx/templates")
 file(GLOB SPHINX_DOC_DIRS LIST_DIRECTORIES true LIST_FILES false "${PROJECT_SOURCE_DIR}/plugins/processing/*")
 foreach(DOCDIR ${SPHINX_DOC_DIRS})
 	if(IS_DIRECTORY "${DOCDIR}/doc/boxes")
-		INSTALL(DIRECTORY "${DOCDIR}/doc/boxes" DESTINATION ${DIST_DOCTMP}/sphinx/source)
+		install(DIRECTORY "${DOCDIR}/doc/boxes" DESTINATION ${DIST_DOCTMP}/sphinx/source)
 	endif()
 endforeach()
 
-INSTALL(DIRECTORY sphinx/source DESTINATION ${DIST_DOCTMP}/sphinx)
-INSTALL(FILES sphinx/make.bat DESTINATION ${DIST_DOCTMP}/sphinx)
-INSTALL(FILES sphinx/Makefile DESTINATION ${DIST_DOCTMP}/sphinx)
-INSTALL(FILES sphinx/build-documentation.cmd DESTINATION ${DIST_DOCTMP})
-INSTALL(FILES sphinx/build-documentation.sh DESTINATION ${DIST_DOCTMP})
+install(DIRECTORY sphinx/source DESTINATION ${DIST_DOCTMP}/sphinx)
+install(FILES sphinx/make.bat DESTINATION ${DIST_DOCTMP}/sphinx)
+install(FILES sphinx/Makefile DESTINATION ${DIST_DOCTMP}/sphinx)
+install(FILES sphinx/build-documentation.cmd DESTINATION ${DIST_DOCTMP})
+install(FILES sphinx/build-documentation.sh DESTINATION ${DIST_DOCTMP})
 
