--- a/modules/CMakeLists.txt
+++ b/modules/CMakeLists.txt
@@ -3,5 +3,5 @@ OV_SET_CUSTOM_DOCUMENTATION("ebml" "EBML parser and formater library" "src" "inc
 OV_ADD_PROJECTS("MODULES")
 
 # Sort target into directories for better visualization in IDE
-SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS ON)
-SET(MODULES_FOLDER Modules)
+set_property(GLOBAL PROPERTY USE_FOLDERS ON)
+set(MODULES_FOLDER Modules)
