--- a/unit-test/openvibe-toolkit/CMakeLists.txt
+++ b/unit-test/openvibe-toolkit/CMakeLists.txt
@@ -20,7 +20,7 @@
 #######################################################################
 
 # Base framework features tests
-PROJECT(openvibe-toolkit-test)
+project(openvibe-toolkit-test VERSION ${OPENVIBE_MAJOR_VERSION}.${OPENVIBE_MINOR_VERSION}.${OPENVIBE_PATCH_VERSION})
 
 # ---------------------------------
 # Target macros
@@ -33,7 +33,7 @@ SET_BUILD_PLATFORM()
 # ----------------------
 
 # Test that needs to called with parameters
-SET(TEST_WITH_PARAM
+set(TEST_WITH_PARAM
 	uoMatrixToolkitTest.cpp
 	urImportScenarioFromFileTest.cpp
 	urExportScenarioToFileTest.cpp
@@ -41,7 +41,7 @@ SET(TEST_WITH_PARAM
 )
 
 # Test that needs to called without parameters
-SET(TEST_NO_PARAM
+set(TEST_NO_PARAM
 )
 
 # Create test sources list
@@ -49,29 +49,35 @@ SET(TEST_NO_PARAM
 # in the build tree. ${PROJECT_NAME}.cpp is
 # the test driver called by ctest to run
 # the different tests added to this target.
-CREATE_TEST_SOURCELIST (Tests
+create_test_sourcelist(Tests
 	${PROJECT_NAME}.cpp
 	${TEST_WITH_PARAM}
 	${TEST_NO_PARAM}
 	)
 
-ADD_EXECUTABLE(${PROJECT_NAME} ${Tests})
-INCLUDE("FindOpenViBE")
-INCLUDE("FindOpenViBECommon")
-INCLUDE("FindOpenViBEToolkit")
-INCLUDE("FindOpenViBEModuleSystem")
+add_executable(${PROJECT_NAME} ${Tests})
+
+target_link_libraries(${PROJECT_NAME}
+                      ${GTEST_BOTH_LIBRARIES}
+                      openvibe
+                      openvibe-common
+                      openvibe-module-system
+                      openvibe-toolkit
+                      openvibe-test-unit-toolkit)
+
 SET_PROPERTY(TARGET ${PROJECT_NAME} PROPERTY FOLDER ${TESTS_FOLDER})
-TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${OVT_UNIT_TOOLKIT_LIB} ${GTEST_BOTH_LIBRARIES} ${OV_LIBS})
+
+add_definitions(-DTARGET_HAS_ThirdPartyOpenViBEPluginsGlobalDefines)
 
 # Add test without parameter to driver
-FOREACH(test ${TEST_NO_PARAM})
-	GET_FILENAME_COMPONENT(TName ${test} NAME_WE)
-	ADD_TEST(NAME ${TName} COMMAND ${PROJECT_NAME} ${TName})
-ENDFOREACH()
+foreach(test ${TEST_NO_PARAM})
+	get_filename_component(TName ${test} NAME_WE)
+	add_test(NAME ${TName} COMMAND ${PROJECT_NAME} ${TName})
+endforeach()
 
 # Add test with parameter to driver
-ADD_TEST(NAME uoMatrixToolkitTest COMMAND ${PROJECT_NAME} uoMatrixToolkitTest "${OVT_TEST_TEMPORARY_DIR}")
-ADD_TEST(NAME urImportScenarioFromFileTest COMMAND ${PROJECT_NAME} urImportScenarioFromFileTest "${OVT_OPENVIBE_DATA}/kernel/openvibe.conf" "${CMAKE_CURRENT_SOURCE_DIR}/data/")
-ADD_TEST(NAME urExportScenarioToFileTest COMMAND ${PROJECT_NAME} urExportScenarioToFileTest "${OVT_OPENVIBE_DATA}/kernel/openvibe.conf" "${OVT_TEST_TEMPORARY_DIR}")
-ADD_TEST(NAME urValidateScenarioTest COMMAND ${PROJECT_NAME} urValidateScenarioTest "${OVT_OPENVIBE_DATA}/kernel/openvibe.conf" "${CMAKE_CURRENT_SOURCE_DIR}/data/")
+add_test(NAME uoMatrixToolkitTest COMMAND ${PROJECT_NAME} uoMatrixToolkitTest "${OVT_TEST_TEMPORARY_DIR}")
+add_test(NAME urImportScenarioFromFileTest COMMAND ${PROJECT_NAME} urImportScenarioFromFileTest "${OVT_OPENVIBE_DATA}/kernel/openvibe.conf" "${CMAKE_CURRENT_SOURCE_DIR}/data/")
+add_test(NAME urExportScenarioToFileTest COMMAND ${PROJECT_NAME} urExportScenarioToFileTest "${OVT_OPENVIBE_DATA}/kernel/openvibe.conf" "${OVT_TEST_TEMPORARY_DIR}")
+add_test(NAME urValidateScenarioTest COMMAND ${PROJECT_NAME} urValidateScenarioTest "${OVT_OPENVIBE_DATA}/kernel/openvibe.conf" "${CMAKE_CURRENT_SOURCE_DIR}/data/")
 
